# agent-vis

./: .gitignore  README.md  flake.nix
.claude/: settings.json  settings.local.json
frontend/: Cargo.toml
frontend/assets/: 1  low_poly_spaceships.glb
frontend/assets/shaders/: planet_noise.wgsl
frontend/src/: agent.rs  fs_model.rs  galaxy.rs  main.rs  planet_material.rs  watcher.rs  ws_client.rs
hooks/: log_stdin.sh  settings.json
server/: Cargo.toml  README.md
server/src/: main.rs
